--- a/views/tradingTicket.hbs
+++ b/views/tradingTicket.hbs
@@ -9,8 +9,8 @@
     <h2>Trading Ticket</h2>
     <div id="tradeInput">
         <input class="hidden" id="accountNumber" name="accountNumber" value={{data.accountNumber}}></input>
-        <p class="title">order symbol: </p><input id="orderSymbol" name="orderSymbol"></input>
-        <p class="title">order quantity: </p><input id="orderQuantity" name="orderQuantity" type="number"></input>
+        <p class="title">orderSymbol: </p><input id="orderSymbol" name="orderSymbol"></input>
+        <p class="title">orderQuantity: </p><input id="orderQuantity" name="orderQuantity" type="number"></input>
         <p class="title">orderAction: </p>
         <select name="orderAction">
             <option value="buy">buy</option>
