--- a/views/requestError.hbs
+++ b/views/requestError.hbs
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Authentication Success</title>
     <link rel='stylesheet' href='/stylesheets/authConfirmed.css'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Request failed</h1>
-    <p>{{data.shortMessage}}</p>
-    <p>{{data.longMessage}}</p>
+    <h1>Request failed</h1>
+        <p>{{data.shortMessage}}</p>
+        <p>{{data.longMessage}}</p>
 
+    <form action="/authenticated" method="post" id="dataForm" class="hidden">
+        <button type="submit" id="reAuthenticate" value="Send">Re-Authenticate</button>
+    </form>
 </body>
 
 </html>
 <script src="/javascripts/jquery-2.2.0.min.js"></script>
+<script src="/javascripts/jquery_cookie.js"></script>
