ui partials for header and footer

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,8 @@
     {{> prereqs }}
   </head>
   <body class="sandboxtwo">
-    <div class="container">
       {{> header }}
+      <div class="page-content tab">
       <h2 .col-xs-6 .col-md-4>Welcome to <span style="color: lightcoral;">Portfolio </span><span class="trade">Trade</span><span class="it">IT</span></h2>
     <p><h4>Broker Selection</h4></p>
 
@@ -43,8 +43,8 @@
           <input id="longMessage" name="longMessage"></input>
           <button type="submit" id="failedAuthSubmit" value="Send"></button>
       </form>
+      </div>
       {{> footer }}
-    </div>
   </body>
 </html>
 
