--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -7,7 +7,7 @@
 
           <div class="icon-bubble">
             <a href="https://console.bluemix.net/catalog/services/investment-portfolio" target="_blank">
-            <img src='/public/images/icons/portfolio_service.svg' alt="investment portfolio api">
+            <img src='/images/portfolio_service.svg' alt="investment portfolio api">
             </a>
           </div>
           <p>
@@ -18,7 +18,7 @@
 
           <div class="icon-bubble">
             <a href="https://console.bluemix.net/catalog/services/natural-language-understanding" target="_blank">
-            <img src='images/icons/natural-language-understanding.svg' alt="watson natural language understanding">
+            <img src='/images/natural-language-understanding.svg' alt="watson natural language understanding">
             </a>
           </div>
           <p>
@@ -29,7 +29,7 @@
 
           <div class="icon-bubble">
             <a href="https://console.bluemix.net/catalog/services/speech-to-text" target="_blank">
-            <img src='images/icons/speech-to-text.svg' alt="watson speech to text">
+            <img src='/images/speech-to-text.svg' alt="watson speech to text">
             </a>
           </div>
           <p>
@@ -40,7 +40,7 @@
 
           <div class="icon-bubble">
             <a href="https://console.bluemix.net/catalog/services/visual-recognition" target="_blank">
-            <img src='images/icons/vis_rec.svg' alt="watson visual recognition">
+            <img src='/images/vis_rec.svg' alt="watson visual recognition">
             </a>
           </div>
           <p>
@@ -50,35 +50,35 @@
     </div>
 
       <div class="wii-info__text">
-        <h3>
+        <h4>
           What you can do next
+        </h4>
           <p></p>
-        </h3>
 
         <div class="wii-tile">
           <a href="https://portfolio-optimize.mybluemix.net" target="_blank">
-            Rebalance your portfolio
+            <h3>Rebalance your portfolio</h3>
           </a>
-          <p>
+          <p><h5>
               Rebalance an investment portfolio based on a wide range of objectives and investor preferences such as avoiding sin stocks, focusing on socially responsible investments, or limiting contribution to asset classes, all while minimizing the overall volatility with respect to a benchmark.
-          </p>
+          </h5></p>
         </div>
 
         <div class="wii-tile">
           <a href="https://predictive-market-stress-testing.mybluemix.net" target="_blank">
-            Stress test your portfolio
+            <h4>Stress test your portfolio</h4>
           </a>
-          <p>
+          <p><h5>
               Project the potential impact to your portfolio based on the result of a macroeconomic shock and its resulting, correlated effects on the rest of the market.
-          </p>
+          </h5></p>
         </div>
        
         <div class="wii-tile">
           <a href="https://integrate-investment-portfolio.mybluemix.net/" target="_blank">
-            Build a new portfolio
+            <h4>Build a new portfolio</h4>
           </a>
           <p>
-              Import a new portfolio from your personal brokerage using Quovo.
+              <h5>Import a new portfolio from your personal brokerage using TradeIT.</h5>
           </p>
         </div>
       </div>
