--- a/views/partials/prereqs.hbs
+++ b/views/partials/prereqs.hbs
@@ -8,6 +8,5 @@
 </script>
 <script src="https://d3js.org/d3.v4.js">
 </script>
-<!--<link rel='stylesheet' href='/stylesheets/style.css' />
+<link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
--->
