--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     {{> prereqs }}
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body class="sandboxtwo">
       {{> header }}
