--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,7 @@
 	<div class="header-bar__home">
 		<div class="header-bar__home__button">
 			<strong>
-				Portfolio TradeIT&nbsp;
+				<a href="/" style="text-decoration: none; color: #ffffff;">Portfolio TradeIT</a>
 			</strong>
 		</div>
 		<div class="header-bar__new">
