--- a/views/authConfirmed.hbs
+++ b/views/authConfirmed.hbs
@@ -55,9 +55,9 @@
             account = this.value;
         });
 
-        //$('#getTradingTicket').on('click', function(){
-        //    getTradingTicket();
-        //});
+        $('#getTradingTicket').on('click', function(){
+            getTradingTicket();
+        });
 
         $('#closeSession').on('click', function(){
             triggerCloseSession();
