--- a/views/tradingTicket.hbs
+++ b/views/tradingTicket.hbs
@@ -10,8 +10,8 @@
     <h2>Trading Ticket</h2>
     <div id="tradeInput">
         <input class="hidden" id="accountNumber" name="accountNumber" value={{data.accountNumber}}></input>
-        <p class="title"><h4>Ticker Name: </h4></p><input class="form-control" id="orderSymbol" name="orderSymbol" style="width: 15vw"></input>
-        <p class="title"><h4>Order Quantity: </h4></p><input class="form-control" id="orderQuantity" name="orderQuantity" type="number" style="width: 15vw"></input>
+        <p class="title"><h4>Ticker Name: </h4></p><input class="form-control" id="orderSymbolSet" name="orderSymbol" style="width: 15vw"></input>
+        <p class="title"><h4>Order Quantity: </h4></p><input class="form-control" id="orderQuantitySet" name="orderQuantity" type="number" style="width: 15vw"></input>
         <p class="title"><h4>Order Action: </h4></p>
         <select name="orderAction" class="form-control">
             <option value="buy">buy</option>
@@ -36,27 +36,28 @@
     </div>
 
     <div class="hidden" id="reviewScreen">
-        <p>Review Screen:</p>
-        <p id="orderSymbol"></p>
-        <p id="orderAction"></p>
-        <p id="orderQuantity"></p>
-        <p id="orderExpiration"></p>
-        <p id="orderPrice"></p>
-        <p id="orderValueLabel"></p>
-        <p id="orderMessage"></p>
-        <p id="timestamp"></p>
-        <p id="buyingPower"></p>
-        <p id="availableCash"></p>
-        <p id="estimatedOrderCommission"></p>
-        <button id=cancel>Cancel</button>
-        <button id=placeOrder>Place Order</button>
+        <span class="text-info">Review Screen:</span><br><br>
+        <span id="orderSymbol"></span><br>
+        <span id="orderAction"></span><br>
+        <span id="orderQuantity"></span><br>
+        <span id="orderExpiration"></span><br>
+        <span id="orderPrice"></span><br>
+        <span id="orderValueLabel"></span><br>
+        <span id="orderMessage"></span><br>
+        <span id="timestamp"></span><br>
+        <span id="buyingPower"></span><br>
+        <span id="availableCash"></span><br>
+        <span id="estimatedOrderCommission"></span>
+        <br><br>
+        <button class="btn btn-danger" id="cancel">Cancel</button>
+        <button class="btn btn-success" id="placeOrder">Place Order</button>
 
     </div>
 
     <div class="hidden" id="confirmationScreen">
-        <p>Confirmation Screen:</p>
-        <p id="confirmationMessage"></p>
-        <p id="orderNumber"></p>
+      <span class="text-primary" style="font-size: large;">Confirmation Screen:</span><br><br>
+      <span style="font-size: large;" id="confirmationMessage"></span><br><br>
+      <span style="font-size: large;" id="orderNumber"></span><br><br>
     </div>
 
     <form action="/authError" method="post" id="sessionExpired" class="hidden">
@@ -66,10 +67,10 @@
     </form>
     <br/>
     <form action="/tradingTicket" method="post" id="backToTT" class="hidden">
-        <button class="buttons" id="goBkToTT">Trading Ticket</button>
+        <button class="btn btn-primary" id="goBkToTT">Make another Trade</button>
     </form>
     <br/>
-    <form action="/portfolio" method="post" id="backToPortfolio" class="hidden">
+    <form action="/portfolio" method="post" id="backToPortfolio" class="hidden" style="display: none;">
         <button class="buttons" id="goToPortfolio">View Portfolio</button>
     </form>
   </div>
@@ -106,9 +107,9 @@
     var getPreviewOrder = function(){
         var postData = {};
         postData.token = "{{data.sessionToken}}";
-        postData.orderSymbol = $('#orderSymbol').val();
+        postData.orderSymbol = $('#orderSymbolSet').val();
         postData.accountNumber = $('#accountNumber').val();
-        postData.orderQuantity = $('#orderQuantity').val();
+        postData.orderQuantity = $('#orderQuantitySet').val();
         postData.orderAction = $('select[name=orderAction]').val();
         postData.orderPriceType = $('select[name=orderPriceType]').val();
         postData.orderExpiration = $('select[name=orderExpiration]').val();
@@ -131,17 +132,17 @@
             $('#reviewScreen').removeClass('hidden');
             $('#tradeInput').addClass('hidden');
             if(data.orderDetails){
-                $('#orderSymbol').text("orderSymbol: " + data.orderDetails.orderSymbol);
-                $('#orderAction').text("orderAction: " + data.orderDetails.orderAction);
-                $('#orderQuantity').text("orderQuantity: " + data.orderDetails.orderQuantity);
-                $('#orderExpiration').text("orderExpiration: " + data.orderDetails.orderExpiration);
-                $('#orderPrice').text("orderPrice: " + data.orderDetails.orderPrice);
-                $('#orderValueLabel').text("orderValueLabel: " + data.orderDetails.orderValueLabel);
-                $('#orderMessage').text("orderMessage: " + data.orderDetails.orderMessage);
-                $('#timestamp').text("timestamp: " + data.orderDetails.timestamp);
-                $('#buyingPower').text("buyingPower: " + data.orderDetails.buyingPower);
-                $('#availableCash').text("availableCash: " + data.orderDetails.availableCash);
-                $('#estimatedOrderCommission').text("estimatedOrderCommission: " + data.orderDetails.estimatedOrderCommission);
+                $('#orderSymbol').text("Order Symbol: " + data.orderDetails.orderSymbol);
+                $('#orderAction').text("Order Action: " + data.orderDetails.orderAction);
+                $('#orderQuantity').text("Order Quantity: " + data.orderDetails.orderQuantity);
+                $('#orderExpiration').text("Order Expiration: " + data.orderDetails.orderExpiration);
+                $('#orderPrice').text("Order Price: " + data.orderDetails.orderPrice);
+                $('#orderValueLabel').text("Order Value Label: " + data.orderDetails.orderValueLabel);
+                $('#orderMessage').text("Order Message: " + data.orderDetails.orderMessage);
+                $('#timestamp').text("Timestamp: " + data.orderDetails.timestamp);
+                $('#buyingPower').text("Buying Power: " + data.orderDetails.buyingPower);
+                $('#availableCash').text("Available Cash: " + data.orderDetails.availableCash);
+                $('#estimatedOrderCommission').text("Estimated Order Commission: " + data.orderDetails.estimatedOrderCommission);
 
 
                 $('#cancel').on('click', function(){
