--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -6,45 +6,23 @@
         <div class="wii-tile">
 
           <div class="icon-bubble">
+            <a href="https://www.trade.it" target="_blank">
+            <img src='/images/portfolio_service.svg' alt="investment portfolio api">
+            </a>
+          </div>
+          <p>
+            Trade IT
+          </p>
+        </div>
+        <div class="wii-tile">
+
+          <div class="icon-bubble">
             <a href="https://console.bluemix.net/catalog/services/investment-portfolio" target="_blank">
             <img src='/images/portfolio_service.svg' alt="investment portfolio api">
             </a>
           </div>
           <p>
             Investment Portfolio
-          </p>
-        </div>
-        <div class="wii-tile">
-
-          <div class="icon-bubble">
-            <a href="https://console.bluemix.net/catalog/services/natural-language-understanding" target="_blank">
-            <img src='/images/natural-language-understanding.svg' alt="watson natural language understanding">
-            </a>
-          </div>
-          <p>
-            Natural Language Understanding
-          </p>
-        </div>
-        <div class="wii-tile">
-
-          <div class="icon-bubble">
-            <a href="https://console.bluemix.net/catalog/services/speech-to-text" target="_blank">
-            <img src='/images/speech-to-text.svg' alt="watson speech to text">
-            </a>
-          </div>
-          <p>
-            Speech to Text
-          </p>
-        </div>
-        <div class="wii-tile">
-
-          <div class="icon-bubble">
-            <a href="https://console.bluemix.net/catalog/services/visual-recognition" target="_blank">
-            <img src='/images/vis_rec.svg' alt="watson visual recognition">
-            </a>
-          </div>
-          <p>
-            Visual Recognition
           </p>
         </div>
     </div>
