--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,13 +2,14 @@
 <html>
   <head>
     {{> prereqs }}
+    <link rel='stylesheet' href='/stylesheets/main.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body class="sandboxtwo">
       {{> header }}
       <div class="page-content tab">
       <h2 .col-xs-6 .col-md-4>Welcome to <span style="color: lightcoral;">Portfolio </span><span class="trade">Trade</span><span class="it">IT</span></h2>
-    <p><h4>Broker Selection</h4></p>
+    <p><h3>Broker Selection</h3></p>
 
     <div class="userInput">
         <br>
