--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -7,7 +7,7 @@
 
           <div class="icon-bubble">
             <a href="https://www.trade.it" target="_blank">
-            <img src='/images/portfolio_service.svg' alt="investment portfolio api">
+            <img src='/images/tradeit.jpeg' alt="investment portfolio api">
             </a>
           </div>
           <p>
@@ -15,7 +15,6 @@
           </p>
         </div>
         <div class="wii-tile">
-
           <div class="icon-bubble">
             <a href="https://console.bluemix.net/catalog/services/investment-portfolio" target="_blank">
             <img src='/images/portfolio_service.svg' alt="investment portfolio api">
@@ -28,35 +27,35 @@
     </div>
 
       <div class="wii-info__text">
-        <h4>
+        <h2>
           What you can do next
-        </h4>
+        </h2>
           <p></p>
 
         <div class="wii-tile">
-          <a href="https://portfolio-optimize.mybluemix.net" target="_blank">
-            <h3>Rebalance your portfolio</h3>
+          <a href="https://portfolio-analyze.mybluemix.net/" target="_blank">
+            <h3>Analyze your portfolio</h3>
           </a>
-          <p><h5>
-              Rebalance an investment portfolio based on a wide range of objectives and investor preferences such as avoiding sin stocks, focusing on socially responsible investments, or limiting contribution to asset classes, all while minimizing the overall volatility with respect to a benchmark.
-          </h5></p>
+          <p><h3 style="font-weight: 100">
+              Do you know what's in your portfolio? Create visualizations that provide key insights into your investments, and help you design a portfolio that reflects your personal values.
+          </h3></p>
         </div>
 
         <div class="wii-tile">
-          <a href="https://predictive-market-stress-testing.mybluemix.net" target="_blank">
-            <h4>Stress test your portfolio</h4>
+          <a href="https://portfolio-optimize.mybluemix.net" target="_blank">
+            <h3>Optimize your portfolio</h3>
           </a>
-          <p><h5>
-              Project the potential impact to your portfolio based on the result of a macroeconomic shock and its resulting, correlated effects on the rest of the market.
-          </h5></p>
+          <p><h3 style="font-weight: 100">
+              Rebalance an investment portfolio based on a wide range of objectives and investor preferences such as avoiding sin stocks, focusing on socially responsible investments, or limiting contribution to asset classes, all while minimizing the overall volatility with respect to a benchmark.
+          </h3></p>
         </div>
        
         <div class="wii-tile">
-          <a href="https://integrate-investment-portfolio.mybluemix.net/" target="_blank">
-            <h4>Build a new portfolio</h4>
+          <a href="https://wealth-management-chatbot-1.mybluemix.net/demo.html" target="_blank">
+            <h3>Chat with Watson about your Holdings</h3>
           </a>
           <p>
-              <h5>Import a new portfolio from your personal brokerage using TradeIT.</h5>
+              <h3 style="font-weight: 100">Speak with a conversational agent to ask questions about investment returns, relevant news, and predictive analysis.</h3>
           </p>
         </div>
       </div>
