--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,13 +2,15 @@
 	<div class="header-bar__home">
 		<div class="header-bar__home__button">
 			<strong>
-				<a href="/" style="text-decoration: none; color: #ffffff;">Portfolio TradeIT</a>
+				<a href="/" style="text-decoration: none; color: #ffffff;">Portfolio Trade.IT</a>
 			</strong>
 		</div>
 		<div class="header-bar__new">
+			<a href="/">
 			<button class="new-analysis Button secondary" aria-label="New Scenario">
-				New Listener
+				New Brokerage
 			</button>
+			</a>
 		</div>
 	</div>
 </div>
