--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -3,7 +3,7 @@
 <head>
     <title>Portfolio</title>
     <link rel='stylesheet' href='/stylesheets/portfolio.css'/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 </head>
 <body>
     <h2>Portfolio View</h2>
